syntax= "proto3";

package user_service;

option go_package = "github.com/Abelova-Grupa/Mercypher/proto/userpb";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";

message LoginUserRequest {
    string username = 1;
    string password = 2;
    string token = 3;
}

message LogoutUserRequest {
    string username = 1;
}

message LoginUserResponse {
    string username = 1;
    string access_token = 2;
}

message ValidateUserAccountRequest {
    string username = 1;
    string auth_code = 2;
}

message VerifyTokenRequest {
    string token = 1;
}

message RegisterUserRequest {
    string username = 1;
    string email = 2;
    string password = 3;
    google.protobuf.Timestamp created_at = 4;
}

message RegisterUserResponse {
    string username = 1;
    string email = 2;
}

message DecodeAccessTokenRequest {
    string token = 1;
}

message DecodeAccessTokenResponse {
    string username = 1;
}

message CreateContactRequest {
    string username = 1;
    string contact_name = 2;
    string nickname = 3; 
}

message CreateContactResponse {
    string username = 1;
    string contact_name = 2;
    string nickname = 3;
    google.protobuf.Timestamp created_at = 4; 
}

message DeleteContactRequest {
    string username = 1;
    string contact_name = 2;
}

message GetContactsRequest {
    // Username represents the user whos contacts are we retreveing
    string username = 1;
    string search_criteria = 2;
}

message GetContactResponse {
    string username = 1;
    string contact_name = 2;
    string nickname = 3;
}

message UpdateContactRequest {
    string username = 1;
    string contact_name = 2;
    string nickname = 3;
}

message UpdateContactResponse {
    string username = 1;
    string contact_name = 2;
    string nickname = 3;
}

service UserService {
    rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse){}
    rpc LoginUser(LoginUserRequest) returns (LoginUserResponse) {}
    rpc LogoutUser(LogoutUserRequest) returns (google.protobuf.Empty) {}
    rpc ValidateUserAccount(ValidateUserAccountRequest) returns (google.protobuf.Empty) {}
    rpc VerifyToken(VerifyTokenRequest) returns (google.protobuf.BoolValue) {}
    rpc DecodeAccessToken(DecodeAccessTokenRequest) returns (DecodeAccessTokenResponse) {}
    rpc CreateContact(CreateContactRequest) returns (CreateContactResponse) {}
    rpc DeleteContact(DeleteContactRequest) returns (google.protobuf.Empty) {}
    rpc GetContacts(GetContactsRequest) returns (stream GetContactResponse) {}
    rpc UpdateContact(UpdateContactRequest) returns(UpdateContactResponse) {}
}
